# lightgram

./: README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/src/: example.rs  lib.rs  main.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/categorize_by_metadata/: command.rs  common.rs  mod.rs
src-tauri/src/features/categorize_by_metadata/by_aperture/: service.rs
src-tauri/src/features/categorize_by_metadata/by_camera_make/: service.rs
src-tauri/src/features/categorize_by_metadata/by_camera_model/: service.rs
src-tauri/src/features/categorize_by_metadata/by_date/: service.rs
src-tauri/src/features/categorize_by_metadata/by_focal_length/: service.rs
src-tauri/src/features/categorize_by_metadata/by_gps_location/: service.rs
src-tauri/src/features/convert_raw_to_jpg/: command.rs  model.rs  service.rs
src-tauri/src/features/list_directory_files/: command.rs  model.rs  service.rs
src-tauri/src/features/match_jpg_and_raw/: command.rs  service.rs
src-tauri/src/features/match_jpg_with_raw/: command.rs  model.rs  service.rs
src-tauri/src/features/organize_by_extension/: command.rs  model.rs  service.rs
src-tauri/src/features/organize_files_by_type/: command.rs  mod.rs  service.rs
src-tauri/src/features/organize_raw_files/: command.rs  model.rs  service.rs
src-tauri/src/file_features/: operations.rs  task_control.rs  utils.rs
src-tauri/src/shared/: file_extensions.rs  mod.rs
(+24 files in other folders)
